fix projects section

--- a/src/partials/projects.html
+++ b/src/partials/projects.html
@@ -1,5 +1,172 @@
-<section class="sections-paddings">
+<section class="projects sections-paddings">
   <div class="container">
-    <h2 class="section-title">projects</h2>
+    <h2 class="section-title">Projects</h2>
+    <div class="projects-slider swiper-projects">
+      <ul class="projects-list swiper-wrapper">
+        <li class="projects-item swiper-slide">
+          <div class="projects-content">
+            <ul class="projects-tags">
+              <li class="tag">
+                <p>#react</p>
+              </li>
+              <li class="tag">
+                <p>#js</p>
+              </li>
+              <li class="tag"><p>#node js</p></li>
+              <li class="tag"><p>#git</p></li>
+            </ul>
+            <h3 class="projects-title">
+              Programming Across Borders: Ideas, Technologies, Innovations
+            </h3>
+            <button
+              class="projects-btn"
+              onclick="window.open('https://github.com/Vlad-Rzaiev/nexgen-portfolio-team-project', '_blank')"
+            >
+              See project
+            </button>
+          </div>
+          <div class="projects-images">
+            <picture>
+              <source
+                media="(min-width: 1440px)"
+                srcset="
+                  ./img/projects/projects1_desktop@1.png 1x,
+                  ./img/projects/projects1_desktop@2.png 2x
+                "
+              />
+              <source
+                media="(min-width: 768px)"
+                srcset="
+                  ./img/projects/projects1_tablet@1.png 1x,
+                  ./img/projects/projects1_tablet@2.png 2x
+                "
+              />
+              <source
+                media="(max-width: 767px)"
+                srcset="
+                  ./img/projects/projects1_mobile@1.png 1x,
+                  ./img/projects/projects1_mobile@2.png 2x
+                "
+              />
+              <img
+                src="./img/projects/projects2_mobile@1.png"
+                alt="projects-img"
+              />
+            </picture>
+          </div>
+        </li>
+
+        <li class="projects-item swiper-slide">
+          <div class="projects-content">
+            <div class="projects-tags">
+              <span class="tag tag-react">#react</span>
+              <span class="tag tag-js">#js</span>
+              <span class="tag tag-node">#node js</span>
+              <span class="tag tag-git">#git</span>
+            </div>
+            <h3 class="projects-title">
+              Programming Across Borders: Ideas, Technologies, Innovations
+            </h3>
+            <button
+              class="projects-btn"
+              onclick="window.open('https://github.com/Vlad-Rzaiev/nexgen-portfolio-team-project', '_blank')"
+            >
+              See project
+            </button>
+          </div>
+          <div class="projects-images">
+            <picture>
+              <source
+                media="(min-width: 1440px)"
+                srcset="
+                  ./img/projects/projects2_desktop@1.png 1x,
+                  ./img/projects/projects2_desktop@2.png 2x
+                "
+              />
+              <source
+                media="(min-width: 768px)"
+                srcset="
+                  ./img/projects/projects2_tablet@1.png 1x,
+                  ./img/projects/projects2_tablet@2.png 2x
+                "
+              />
+              <source
+                media="(max-width: 767px)"
+                srcset="
+                  ./img/projects/projects2_mobile@1.png 1x,
+                  ./img/projects/projects2_mobile@2.png 2x
+                "
+              />
+              <img
+                src="./img/projects/projects1_mobile@1.png"
+                alt="projects-img"
+              />
+            </picture>
+          </div>
+        </li>
+
+        <li class="projects-item swiper-slide">
+          <div class="projects-content">
+            <div class="projects-tags">
+              <span class="tag tag-react">#react</span>
+              <span class="tag tag-js">#js</span>
+              <span class="tag tag-node">#node js</span>
+              <span class="tag tag-git">#git</span>
+            </div>
+            <h3 class="projects-title">
+              Programming Across Borders: Ideas, Technologies, Innovations
+            </h3>
+            <button
+              class="projects-btn"
+              onclick="window.open('https://github.com/Vlad-Rzaiev/nexgen-portfolio-team-project', '_blank')"
+            >
+              See project
+            </button>
+          </div>
+          <div class="projects-images">
+            <picture>
+              <source
+                media="(min-width: 1440px)"
+                srcset="
+                  ./img/projects/projects3_desktop@1.png 1x,
+                  ./img/projects/projects3_desktop@2.png 2x
+                "
+              />
+              <source
+                media="(min-width: 768px)"
+                srcset="
+                  ./img/projects/projects3_tablet@1.png 1x,
+                  ./img/projects/projects3_tablet@2.png 2x
+                "
+              />
+              <source
+                media="(max-width: 767px)"
+                srcset="
+                  ./img/projects/projects3_mobile@1.png 1x,
+                  ./img/projects/projects3_mobile@2.png 2x
+                "
+              />
+              <img
+                src="./img/projects/projects1_mobile@1.png"
+                alt="projects-img"
+              />
+            </picture>
+          </div>
+        </li>
+      </ul>
+    </div>
+
+    <div class="projects-navigation">
+      <button class="projects-btn-prev" aria-label="Previous slide" disabled>
+        <svg class="projects-svg" width="24" height="24">
+          <use href="./img/sprite.svg#icon-arrow-left"></use>
+        </svg>
+      </button>
+      <button class="projects-btn-next" aria-label="Next slide">
+        <svg class="projects-svg" width="24" height="24">
+          <use href="./img/sprite.svg#icon-arrow-right"></use>
+        </svg>
+      </button>
+    </div>
   </div>
 </section>
