update projects section

--- a/src/partials/projects.html
+++ b/src/partials/projects.html
@@ -58,12 +58,16 @@
 
         <li class="projects-item swiper-slide">
           <div class="projects-content">
-            <div class="projects-tags">
-              <span class="tag tag-react">#react</span>
-              <span class="tag tag-js">#js</span>
-              <span class="tag tag-node">#node js</span>
-              <span class="tag tag-git">#git</span>
-            </div>
+            <ul class="projects-tags">
+              <li class="tag">
+                <p>#react</p>
+              </li>
+              <li class="tag">
+                <p>#js</p>
+              </li>
+              <li class="tag"><p>#node js</p></li>
+              <li class="tag"><p>#git</p></li>
+            </ul>
             <h3 class="projects-title">
               Programming Across Borders: Ideas, Technologies, Innovations
             </h3>
@@ -107,12 +111,16 @@
 
         <li class="projects-item swiper-slide">
           <div class="projects-content">
-            <div class="projects-tags">
-              <span class="tag tag-react">#react</span>
-              <span class="tag tag-js">#js</span>
-              <span class="tag tag-node">#node js</span>
-              <span class="tag tag-git">#git</span>
-            </div>
+            <ul class="projects-tags">
+              <li class="tag">
+                <p>#react</p>
+              </li>
+              <li class="tag">
+                <p>#js</p>
+              </li>
+              <li class="tag"><p>#node js</p></li>
+              <li class="tag"><p>#git</p></li>
+            </ul>
             <h3 class="projects-title">
               Programming Across Borders: Ideas, Technologies, Innovations
             </h3>
