--- a/src/css/projects.css
+++ b/src/css/projects.css
@@ -6,11 +6,7 @@
   overflow: hidden;
 }
 
-.projects-list {}
-
-
 .projects-item {
-
   background-color: #fafafa;
   border-radius: 24px;
   overflow: hidden;
@@ -60,11 +56,10 @@
 
 .projects-btn:hover,
 .projects-btn:focus {
-  transform: scale(0.99);
-  box-shadow: inset 0 2px 2px rgba(0, 0, 0, 0.3);
+  background-color: #b9d326;
+  transform: scale(0.98);
+  box-shadow: inset 0 2px 2px rgba(122, 106, 106, 0.2);
 }
-
-.projects-images {}
 
 .projects-navigation {
   display: flex;
@@ -76,7 +71,6 @@
 
 .projects-btn-prev,
 .projects-btn-next {
-
   display: flex;
   align-items: center;
   justify-content: center;
@@ -113,11 +107,9 @@
 }
 
 
-
 /* Talet */
 
 @media screen and (min-width: 768px) {
-
   .projects-content {
     padding: 64px;
   }
@@ -146,8 +138,6 @@
 /* Desktop */
 
 @media screen and (min-width: 1440px) {
-
-
   .projects-item.swiper-slide {
     display: flex;
     flex-direction: row;
@@ -160,14 +150,10 @@
 
   .projects-tags {
     margin-bottom: 223px;
-
   }
-
-  .projects-images {}
 
   .projects-images img {
     height: 100%;
-    /* Повністю використовує доступну висоту */
     object-fit: cover;
   }
 
