--- a/src/css/about-me.css
+++ b/src/css/about-me.css
@@ -1,9 +1,13 @@
 /* ABOUT-ME SECTION STYLES */
 
 /* DESCRIPTION STYLES */
+.description-wrapper {
+  min-width: 288px;
+  max-width: 343px;
+}
 .about-me-description-wrapper {
   border-radius: 24px;
-  width: 343px;
+  max-width: 343px;
   height: 500px;
   padding: 32px;
   margin-bottom: 16px;
@@ -34,8 +38,11 @@
 /* DESCRIPTION TABLET STYLES */
 
 @media only screen and (min-width: 768px) {
+  .description-wrapper {
+    max-width: 704px;
+  }
   .about-me-description-wrapper {
-    width: 704px;
+    max-width: 704px;
     height: 700px;
     padding: 64px;
   }
@@ -55,8 +62,11 @@
 /* DESCRIPTION DESKTOP STYLES */
 
 @media only screen and (min-width: 1440px) {
+  .description-wrapper {
+    max-width: 1376px;
+  }
   .about-me-description-wrapper {
-    width: 680px;
+    max-width: 680px;
     height: 700px;
     margin-bottom: 0;
   }
@@ -94,7 +104,8 @@
   justify-content: space-between;
   position: relative;
 
-  width: 343px;
+  min-width: 288px;
+  max-width: 343px;
   height: 36px;
   margin-bottom: 12px;
 }
@@ -185,7 +196,7 @@
   }
 
   .about-me-ac-wrapper {
-    width: 704px;
+    max-width: 704px;
     height: 40px;
     margin-bottom: 8px;
   }
@@ -216,7 +227,7 @@
   }
 
   .about-me-ac-wrapper {
-    width: 1376px;
+    max-width: 1376px;
     height: 40px;
   }
 }
@@ -244,12 +255,15 @@
 
 .skills-wrapper {
   display: flex;
+  justify-content: space-between;
   flex-direction: row;
+  min-width: 288px;
+  max-width: 343px;
+  min-height: 109px;
 }
 
 .skills-list {
   display: flex;
-  align-items: flex-start;
   justify-content: flex-start;
   flex-direction: row;
   gap: 0px;
@@ -259,7 +273,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 130px;
+  aspect-ratio: 1 / 1;
 
   border: 1px solid rgba(250, 250, 250, 0.2);
   border-radius: 100px;
@@ -273,8 +287,7 @@
   display: flex;
   justify-content: flex-end;
   align-items: center;
-  width: 83px;
-  height: 130px;
+  min-width: 70px;
 }
 
 .skills-swip-btn {
@@ -286,11 +299,27 @@
   opacity: 0.2;
 }
 
+@media only screen and (min-width: 375px) {
+  .skills-wrapper {
+    min-width: none;
+    max-width: none;
+    min-height: none;
+    height: 130px;
+  }
+
+  .skills-swip-btn-wrapper {
+    min-width: none;
+    width: 83px;
+  }
+}
+
 /* SKILLS-LIST TABLET STYLES */
 
 @media only screen and (min-width: 768px) {
-  .skills-item.swiper-slide {
+  .skills-wrapper {
+    width: 704px;
     height: 200px;
+    overflow: hidden;
   }
 
   .skills-item.swiper-slide {
@@ -312,8 +341,10 @@
 
 @media only screen and (min-width: 1440px) {
   .skills-wrapper {
-    padding-left: 32px;
-    padding-right: 32px;
+    width: 1312px;
+    margin-left: auto;
+    margin-right: auto;
+    overflow: hidden;
   }
 
   .skills-swip-btn-wrapper {
@@ -325,8 +356,9 @@
 
 .skills-swip-wrapper.swiper-one {
   display: flex;
-  width: 260px;
   overflow: hidden;
+  min-width: 218px;
+  max-width: 260px;
   margin-left: 0;
   margin-right: 0;
 }
@@ -334,12 +366,19 @@
   background-color: #c6e327;
 }
 
+@media only screen and (min-width: 375px) {
+  .skills-swip-wrapper.swiper-one {
+    min-width: none;
+    max-width: none;
+    width: 260px;
+  }
+}
+
 /* SWIPER TABLET STYLES */
 
 @media only screen and (min-width: 768px) {
   .skills-swip-wrapper.swiper-one {
     width: 600px;
-    overflow: hidden;
   }
 }
 
@@ -348,6 +387,5 @@
 @media only screen and (min-width: 1440px) {
   .skills-swip-wrapper.swiper-one {
     width: 1200px;
-    overflow: hidden;
   }
 }
