--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -4,53 +4,49 @@
       hello. i'm fullstack developer lloyd jefferson.
     </h1>
 
-    <div class="hero-social-links">
-      <ul class="hero-social-links-list">
-        <li class="hero-social-links-item">
-          <a
-            class="hero-social-links-icon"
-            href="https://www.instagram.com/goitclub/"
-            target="_blank"
-            rel="noopener noreferrer"
-            >IG</a
-          >
-        </li>
+    <ul class="hero-social-links-list">
+      <li class="hero-social-links-item">
+        <a
+          class="hero-social-links-icon"
+          href="https://www.instagram.com/goitclub/"
+          target="_blank"
+          rel="noopener noreferrer"
+          >IG</a
+        >
+      </li>
 
-        <li class="hero-social-links-item">
-          <a
-            class="hero-social-links-icon"
-            href="https://www.facebook.com/goITclub/"
-            target="_blank"
-            rel="noopener noreferrer"
-            >FB</a
-          >
-        </li>
-        <li class="hero-social-links-item">
-          <a
-            class="hero-social-links-icon"
-            href="https://www.youtube.com/c/GoIT"
-            target="_blank"
-            rel="noopener noreferrer"
-            >YT</a
-          >
-        </li>
-        <li class="hero-social-links-item">
-          <a
-            class="hero-social-links-icon"
-            href="https://github.com/Vlad-Rzaiev/nexgen-portfolio-team-project"
-            target="_blank"
-            rel="noopener noreferrer"
-            >GH</a
-          >
-        </li>
-        <li class="hero-social-links-item hero-social-email">
-          <a
-            class="hero-social-links-icon"
-            href="mailto:lloydjefferson@gmail.com"
-            >lloydjefferson@gmail.com</a
-          >
-        </li>
-      </ul>
-    </div>
+      <li class="hero-social-links-item">
+        <a
+          class="hero-social-links-icon"
+          href="https://www.facebook.com/goITclub/"
+          target="_blank"
+          rel="noopener noreferrer"
+          >FB</a
+        >
+      </li>
+      <li class="hero-social-links-item">
+        <a
+          class="hero-social-links-icon"
+          href="https://www.youtube.com/c/GoIT"
+          target="_blank"
+          rel="noopener noreferrer"
+          >YT</a
+        >
+      </li>
+      <li class="hero-social-links-item">
+        <a
+          class="hero-social-links-icon"
+          href="https://github.com/Vlad-Rzaiev/nexgen-portfolio-team-project"
+          target="_blank"
+          rel="noopener noreferrer"
+          >GH</a
+        >
+      </li>
+      <li class="hero-social-links-item hero-social-email">
+        <a class="hero-social-links-icon" href="mailto:lloydjefferson@gmail.com"
+          >lloydjefferson@gmail.com</a
+        >
+      </li>
+    </ul>
   </div>
 </section>
