fix swiper library.v2

--- a/src/partials/about-me.html
+++ b/src/partials/about-me.html
@@ -159,7 +159,7 @@
           <li class="skills-item swiper-slide">Soft skills</li>
         </ul>
       </div>
-      <div class="skills-swip-btn-wrapper swiper-button-next">
+      <div class="skills-swip-btn-wrapper skills-swiper-button-next">
         <button class="skills-swip-btn" type="button">
           <svg class="skills-swip-icon" width="28" height="28">
             <use href="./img/sprite.svg#icon-arrow-right"></use>
