--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -15,10 +15,16 @@
   font-weight: 500;
   line-height: 1;
   letter-spacing: -0.03em;
-  padding: 281px 16px 212px 16px;
+  padding: 281px 16px 180px 16px;
   opacity: 1;
   color: #fafafa;
   text-transform: uppercase;
+}
+
+@media screen and (min-width: 374px) {
+  .hero-title {
+    padding-bottom: 212px;
+  }
 }
 
 @media screen and (min-device-pixel-ratio: 2),
@@ -32,12 +38,15 @@
 .hero-social-links-list {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  flex-wrap: wrap;
+  justify-content: center;
   align-items: center;
   gap: 4px;
+  row-gap: 8px;
   list-style: none;
-  width: 342px;
   margin-left: auto;
+  max-width: 342px;
+  min-width: 320px;
 }
 
 .hero-social-links-item {
@@ -101,8 +110,10 @@
   }
 
   .hero-social-links-list {
+    flex-wrap: nowrap;
+    justify-content: space-between;
     gap: 8px;
-    width: 473px;
+    max-width: 473px;
   }
 
   .hero-social-links-item {
