--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -1,5 +1,22 @@
-<section class="sections-paddings">
+<section class="sections-paddings" id="reviews">
   <div class="container">
-    <h2 class="section-title">Reviews</h2>
+    <h3 class="section-title reviews-title">reviews</h3>
+    <div class="swiper reviews-swiper">
+      <ul class="reviews-list swiper-wrapper"></ul>
+    </div>
+
+    <div class="reviews-arrows-wrapper">
+      <button class="reviews-prev-btn">
+        <svg class="reviews-left-arrow-icon" width="24" height="24">
+          <use href="./img/sprite.svg#icon-arrow-left"></use>
+        </svg>
+      </button>
+
+      <button class="reviews-next-btn">
+        <svg class="reviews-right-arrow-icon" width="24" height="24">
+          <use href="./img/sprite.svg#icon-arrow-right"></use>
+        </svg>
+      </button>
+    </div>
   </div>
 </section>
