update projects html and css

--- a/src/partials/projects.html
+++ b/src/partials/projects.html
@@ -18,39 +18,104 @@
             <h3 class="projects-title">
               Programming Across Borders: Ideas, Technologies, Innovations
             </h3>
-            <button
-              class="projects-btn"
-              onclick="window.open('https://github.com/Vlad-Rzaiev/nexgen-portfolio-team-project', '_blank')"
+            <a
+              class="projects-link"
+              href="https://github.com/Vlad-Rzaiev/nexgen-portfolio-team-project"
+              target="_blank"
+              rel="noopener noreferrer"
             >
               See project
-            </button>
+            </a>
           </div>
           <div class="projects-images">
             <picture>
               <source
                 media="(min-width: 1440px)"
                 srcset="
-                  ./img/projects/projects1_desktop@1.png 1x,
-                  ./img/projects/projects1_desktop@2.png 2x
+                  ./img/projects/projects1_tablet-desktop@1.png,
+                  ./img/projects/projects1_tablet-desktop@2.png
                 "
+                type="img/png"
               />
+
               <source
                 media="(min-width: 768px)"
                 srcset="
-                  ./img/projects/projects1_tablet@1.png 1x,
-                  ./img/projects/projects1_tablet@2.png 2x
+                  ./img/projects/projects1_tablet-desktop@1.png,
+                  ./img/projects/projects1_tablet-desktop@2.png
                 "
+                type="img/png"
               />
               <source
                 media="(max-width: 767px)"
                 srcset="
-                  ./img/projects/projects1_mobile@1.png 1x,
-                  ./img/projects/projects1_mobile@2.png 2x
+                  ./img/projects/projects1_mobile@1.png,
+                  ./img/projects/projects1_mobile@2.png
+                "
+              />
+              <img
+                src="./img/projects/projects1_mobile@1.png"
+                alt="projects-img"
+                width="311"
+              />
+            </picture>
+          </div>
+        </li>
+
+        <li class="projects-item swiper-slide">
+          <div class="projects-content">
+            <ul class="projects-tags">
+              <li class="tag">
+                <p>#react</p>
+              </li>
+              <li class="tag">
+                <p>#js</p>
+              </li>
+              <li class="tag"><p>#node js</p></li>
+              <li class="tag"><p>#git</p></li>
+            </ul>
+            <h3 class="projects-title">
+              Programming Across Borders: Ideas, Technologies, Innovations
+            </h3>
+            <a
+              class="projects-link"
+              href="https://github.com/Vlad-Rzaiev/nexgen-portfolio-team-project"
+              target="_blank"
+              rel="noopener noreferrer"
+            >
+              See project
+            </a>
+          </div>
+          <div class="projects-images">
+            <picture>
+              <source
+                media="(min-width: 1440px)"
+                srcset="
+                  ./img/projects/projects2_tablet-desktop@1.png,
+                  ./img/projects/projects2_tablet-desktop@2.png
+                "
+                type="img/png"
+              />
+
+              <source
+                media="(min-width: 768px)"
+                srcset="
+                  ./img/projects/projects2_tablet-desktop@1.png,
+                  ./img/projects/projects2_tablet-desktop@2.png
+                "
+                type="img/png"
+              />
+              <source
+                media="(max-width: 767px)"
+                srcset="
+                  ./img/projects/projects2_mobile@1.png,
+                  ./img/projects/projects2_mobile@2.png
                 "
               />
               <img
                 src="./img/projects/projects2_mobile@1.png"
                 alt="projects-img"
+                width="614"
               />
             </picture>
           </div>
@@ -71,92 +136,45 @@
             <h3 class="projects-title">
               Programming Across Borders: Ideas, Technologies, Innovations
             </h3>
-            <button
-              class="projects-btn"
-              onclick="window.open('https://github.com/Vlad-Rzaiev/nexgen-portfolio-team-project', '_blank')"
+            <a
+              class="projects-link"
+              href="https://github.com/Vlad-Rzaiev/nexgen-portfolio-team-project"
+              target="_blank"
+              rel="noopener noreferrer"
             >
               See project
-            </button>
+            </a>
           </div>
           <div class="projects-images">
             <picture>
               <source
                 media="(min-width: 1440px)"
                 srcset="
-                  ./img/projects/projects2_desktop@1.png 1x,
-                  ./img/projects/projects2_desktop@2.png 2x
+                  ./img/projects/projects3_tablet-desktop@1.png,
+                  ./img/projects/projects3_tablet-desktop@2.png
                 "
+                type="img/png"
               />
-              <source
-                media="(min-width: 768px)"
-                srcset="
-                  ./img/projects/projects2_tablet@1.png 1x,
-                  ./img/projects/projects2_tablet@2.png 2x
-                "
-              />
-              <source
-                media="(max-width: 767px)"
-                srcset="
-                  ./img/projects/projects2_mobile@1.png 1x,
-                  ./img/projects/projects2_mobile@2.png 2x
-                "
-              />
-              <img
-                src="./img/projects/projects1_mobile@1.png"
-                alt="projects-img"
-              />
-            </picture>
-          </div>
-        </li>
 
-        <li class="projects-item swiper-slide">
-          <div class="projects-content">
-            <ul class="projects-tags">
-              <li class="tag">
-                <p>#react</p>
-              </li>
-              <li class="tag">
-                <p>#js</p>
-              </li>
-              <li class="tag"><p>#node js</p></li>
-              <li class="tag"><p>#git</p></li>
-            </ul>
-            <h3 class="projects-title">
-              Programming Across Borders: Ideas, Technologies, Innovations
-            </h3>
-            <button
-              class="projects-btn"
-              onclick="window.open('https://github.com/Vlad-Rzaiev/nexgen-portfolio-team-project', '_blank')"
-            >
-              See project
-            </button>
-          </div>
-          <div class="projects-images">
-            <picture>
-              <source
-                media="(min-width: 1440px)"
-                srcset="
-                  ./img/projects/projects3_desktop@1.png 1x,
-                  ./img/projects/projects3_desktop@2.png 2x
-                "
-              />
               <source
                 media="(min-width: 768px)"
                 srcset="
-                  ./img/projects/projects3_tablet@1.png 1x,
-                  ./img/projects/projects3_tablet@2.png 2x
+                  ./img/projects/projects3_tablet-desktop@1.png,
+                  ./img/projects/projects3_tablet-desktop@2.png
                 "
+                type="img/png"
               />
               <source
                 media="(max-width: 767px)"
                 srcset="
-                  ./img/projects/projects3_mobile@1.png 1x,
-                  ./img/projects/projects3_mobile@2.png 2x
+                  ./img/projects/projects3_mobile@1.png,
+                  ./img/projects/projects3_mobile@2.png
                 "
               />
               <img
-                src="./img/projects/projects1_mobile@1.png"
+                src="./img//projects/projects3_mobile@1.png"
                 alt="projects-img"
+                width="614"
               />
             </picture>
           </div>
