--- a/src/css/projects.css
+++ b/src/css/projects.css
@@ -41,7 +41,12 @@
   color: #1c1d20;
 }
 
-.projects-btn {
+.projects-images {
+  padding: 100px 16px;
+  background-color: #242527;
+}
+
+.projects-link {
   padding: 13px 32px;
   font-size: 16px;
   font-weight: 500;
@@ -50,15 +55,15 @@
   border: none;
   background-color: #c6e327;
   border-radius: 60px;
-  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
+  text-shadow: 1px 2px 2px rgba(0, 0, 0, 0.5);
   transition: all 0.3s ease;
 }
 
-.projects-btn:hover,
-.projects-btn:focus {
+.projects-link:hover,
+.projects-link:focus {
   background-color: #b9d326;
-  transform: scale(0.98);
-  box-shadow: inset 0 2px 2px rgba(122, 106, 106, 0.2);
+  transform: scale(0.99);
+  box-shadow: inset 0 2px 2px rgba(5, 6, 2, 0.2);
 }
 
 .projects-navigation {
@@ -127,6 +132,17 @@
     width: 505px;
   }
 
+  .projects-images {
+    padding: 120px 45px;
+  }
+
+  .projects-images img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+
+
   .projects-navigation {
     margin-top: 64px;
     gap: 20px;
@@ -145,6 +161,7 @@
   }
 
   .projects-content {
+    flex: 1;
     padding: 64px;
   }
 
@@ -152,9 +169,9 @@
     margin-bottom: 223px;
   }
 
-  .projects-images img {
-    height: 100%;
-    object-fit: cover;
+  .projects-images {
+    flex: 1;
+    padding: 120px 37px;
   }
 
 }
