--- a/src/partials/footer-work-together.html
+++ b/src/partials/footer-work-together.html
@@ -25,7 +25,6 @@
       title="Invalid email, try again"
       required
     />
-  <div id="email-error" class="error-message">Invalid email, try again</div>
 
     <input class="form-input" id="user-comment" placeholder="comments">
     </input>
@@ -48,24 +47,17 @@
   </form>
  </div>
   </div>
-  
-</footer>
-<div id="modal" class="modal">
+  </footer>
+
+<div id="footer-modal" class="modal">
   <div class="modal-content"> 
-    <button class="close-btn"><svg width="22" height="22" viewBox="0 0 22 22" fill="none" xmlns="http://www.w3.org/2000/svg">
-  <path d="M16.5 5.5L5.5 16.5" stroke="#FAFAFA" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
-  <path d="M5.5 5.5L16.5 16.5" stroke="#FAFAFA" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
-</svg>;</button>
+    <button class="close-btn" id="close-btn"><svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+  <path d="M18 6L6 18" stroke="#FAFAFA" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+  <path d="M6 6L18 18" stroke="#FAFAFA" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+</svg></button>
     <h1 class="title-modal">Thank you for your interest in cooperation!</h1>
     <p class="text-modal">The manager will contact you shortly to discuss further details and opportunities for cooperation. Please stay in touch.</p>
   </div>
 </div>
-<div id="errorModal" class="modal">
-    <div class="modal-content">
-       
-<div id="successModal" style="display: none;">Заявку успішно надіслано!</div>
-<div id="errorModal" style="display: none;">Виникла помилка при відправці заявки.</div>
-        <button class="close-btn" onclick="closeModal('errorModal')">Закрити</button>
-    </div>
-</div>
+
 
