--- a/src/css/faq.css
+++ b/src/css/faq.css
@@ -12,6 +12,20 @@
   margin: 0 auto;
 }
 
+.faq-icon-wrapper {
+  position: absolute;
+  top: 16px;
+  right: 16px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid rgba(250, 250, 250, 0.2);
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  flex-shrink: 0;
+}
+
 .faq-title {
   margin-bottom: 32px;
 }
@@ -22,16 +36,25 @@
   padding: 0;
   margin: 0;
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: 1fr; 
   gap: 0;
 }
+
+
+.accordion-item.is-active .ac-trigger {
+  padding-bottom: 0; 
+}
+
+.accordion-item.is-active .faq-text {
+  padding: 0; 
+}
+
 
 .accordion-item {
   border-bottom: 1px solid #444;
   overflow: hidden;
   box-sizing: border-box;
 }
-
 
 .accordion-item:nth-child(odd) {
   border-left: none; 
@@ -50,7 +73,9 @@
   border-top: 1px solid #444; 
 }
 
+
 .ac-trigger {
+  position: relative;
   width: 100%;
   min-height: 30px;
   background: none;
@@ -68,6 +93,12 @@
   letter-spacing: -0.02em;
   color: #fafafa;
   padding: 20px 0;
+  padding-right: 171px;
+}
+
+.ac-trigger:active {
+  outline: none;
+  box-shadow: none;
 }
 
 .faq-text {
@@ -76,20 +107,18 @@
   line-height: 1.5;
   letter-spacing: -0.02em;
   color: rgba(250, 250, 250, 0.6);
-  padding: 16px 0 20px;
-}
+ 
+  padding: 16px 0 20px;}
+
 
 .accordion-icon {
   transition: transform 0.3s ease-in-out;
-  border: 1px solid rgba(250, 250, 250, 0.2);
   border-radius: 100px;
-  width: 40px;
-  height: 40px;
   flex-shrink: 0;
   fill: rgba(250, 250, 250, 0.6);
 }
 
-.accordion-item.is-active .accordion-icon {
+.accordion-item.is-active .faq-icon-wrapper {
   transform: rotate(180deg);
 }
 
@@ -109,23 +138,16 @@
 @media (max-width: 374px) {
   .accordion-container {
     display: flex;
-    flex-direction: column-reverse; 
+    flex-direction: column-reverse;
   }
-
+  .faq-icon-wrapper {
+    width: 34px;
+    height: 34px;
+  }
   .accordion-item {
     width: 100%;
     border-left: none;
     border-right: none;
-  }
-
-  .ac-trigger {
-    width: 100%;
-    padding: 32px 0;
-  }
-
-  .accordion-icon {
-    width: 34px;
-    height: 34px;
   }
 }
 
@@ -133,94 +155,96 @@
 @media (min-width: 375px) and (max-width: 767px) {
   .accordion-container {
     display: flex;
-    flex-direction: column-reverse; 
+  
+    flex-direction: column;
   }
-
   .accordion-item {
     width: 100%;
     border-left: none;
     border-right: none;
   }
-
   .ac-trigger {
-    width: 100%;
-    padding: 32px 0;
+    padding-right: 60px;
   }
-
-  .accordion-icon {
+  .faq-icon-wrapper {
     width: 34px;
     height: 34px;
-
-
   }
+
 }
 
 
-@media (min-width: 768px) and (max-width: 1439px) {
-  .accordion-container {
-    grid-template-columns: 1fr;
+@media (max-width: 1439px) {
+    .faq-text {
+    padding: 26px 0 24px;
   }
-
-
-  .ac-trigger {
-    padding-top: 32px;
-  padding-bottom: 42px;}
-  
-  .faq-text {
-    padding: 26px 0 24px;}
-  
-  .accordion-item {
-    width: 100%;
-  }
-
- 
   .accordion-item[data-order="1"] { order: 1; }
   .accordion-item[data-order="3"] { order: 2; }
   .accordion-item[data-order="5"] { order: 3; }
   .accordion-item[data-order="2"] { order: 4; }
   .accordion-item[data-order="4"] { order: 5; }
   .accordion-item[data-order="6"] { order: 6; }
+}
 
+
+
+
+
+
+
+@media (min-width: 768px) and (max-width: 1439px) {
+  .accordion-container {
+    display: flex;
+    flex-direction: column; 
+  }
 
   
+  .accordion-item[data-order="1"] { order: 1; }
+  .accordion-item[data-order="3"] { order: 2; }
+  .accordion-item[data-order="5"] { order: 3; }
+  .accordion-item[data-order="2"] { order: 4; }
+  .accordion-item[data-order="4"] { order: 5; }
+  .accordion-item[data-order="6"] { order: 6; }
 }
+
+.faq-text {padding: 16px 0 20px;} 
+  .ac-trigger {
+    padding-top: 32px;
+   
+  }
+  /* .faq-text {
+    padding: 26px 0 24px;
+  } */
+  .accordion-item {
+    width: 100%;
+  }
+
+ 
+
 
 
 @media (min-width: 1440px) {
   .accordion-container {
     grid-template-columns: repeat(2, 1fr);
+  
   }
-
-
-
+  .faq-icon-wrapper {
+    width: 40px;
+    height: 40px;
+  }
   .accordion-item:nth-child(odd) {
     border-right: 2px solid rgba(250, 250, 250, 0.2);
-    padding-right: 32px; 
   }
-
   .accordion-item:nth-child(even) {
-    padding-left: 32px; 
+    padding-left: 32px;
   }
-
   .ac-trigger {
     padding-top: 32px;
-    padding-bottom: 42px;
+   
   }
-
   .faq-text {
-    padding: 21px 0 26px;
+    padding: 26px 0 26px;
   }
-
-
-  .accordion-item:nth-child(odd) .accordion-icon {
-    margin-right: 32px; 
-  }
-
-  .accordion-item:nth-child(even) .accordion-icon {
-    margin-left: 32px; 
-  }
- 
-
 }
 
 
