--- a/src/partials/faq.html
+++ b/src/partials/faq.html
@@ -5,56 +5,89 @@
     <div class="faq-wrapper">
       <ul class="accordion-container">
         <li class="accordion-item ac" data-order="1">
-          <button class="ac-trigger">
+          <button type="button" class="ac-trigger">
             What programming languages are most often used in your project?
-            <svg class="accordion-icon"><use href="./img/sprite.svg#icon-arrow-up"></use></svg>
+            <div class="faq-icon-wrapper">
+              <svg class="accordion-icon" width="20" height="20">
+                <use href="./img/sprite.svg#icon-arrow-up"></use>
+              </svg>
+            </div>
           </button>
-          <div class="ac-panel"><p  class="faq-text">In the field of web development, there are various technologies and programming languages. Typically, this includes a combination of frontend (client side) and backend (server side) languages.</p></div>
+          <div class="ac-panel">
+            <p class="faq-text">In the field of web development, there are various technologies and programming languages. Typically, this includes a combination of frontend (client side) and backend (server side) languages.</p>
+          </div>
         </li>
 
         <li class="accordion-item ac" data-order="2">
-          <button class="ac-trigger">
+          <button type="button"  class="ac-trigger">
             How can I contact you?
-            <svg class="accordion-icon"><use href="./img/sprite.svg#icon-arrow-up"></use></svg>
+            <div class="faq-icon-wrapper">
+              <svg class="accordion-icon" width="20" height="20">
+                <use href="./img/sprite.svg#icon-arrow-up"></use>
+              </svg>
+            </div>
           </button>
-          <div class="ac-panel"><p class="faq-text">In the field of web development, there are various technologies and programming languages. Typically, this includes a combination of frontend (client side) and backend (server side) languages.</p></div>
+          <div class="ac-panel">
+            <p class="faq-text">In the field of web development, there are various technologies and programming languages. Typically, this includes a combination of frontend (client side) and backend (server side) languages.</p>
+          </div>
         </li>
 
         <li class="accordion-item ac" data-order="3">
-          <button class="ac-trigger">
+          <button type="button" class="ac-trigger">
             What are the deadlines for the project?
-            <svg class="accordion-icon"><use href="./img/sprite.svg#icon-arrow-up"></use></svg>
+            <div class="faq-icon-wrapper">
+              <svg class="accordion-icon" width="20" height="20">
+                <use href="./img/sprite.svg#icon-arrow-up"></use>
+              </svg>
+            </div>
           </button>
-          <div class="ac-panel"><p class="faq-text">The terms of project implementation depend to a large extent on a number of factors, such as the scope of the project, its complexity, and the availability of resources. Determining exact deadlines is a difficult task, and it usually occurs during the planning phase of the project.</p></div>
+          <div class="ac-panel">
+            <p class="faq-text">The terms of project implementation depend to a large extent on a number of factors, such as the scope of the project, its complexity, and the availability of resources. Determining exact deadlines is a difficult task, and it usually occurs during the planning phase of the project.</p>
+          </div>
         </li>
   
         <li class="accordion-item ac" data-order="4">
-          <button class="ac-trigger">
+          <button type="button" class="ac-trigger">
             Do you provide advice or support?
-            <svg class="accordion-icon"><use href="./img/sprite.svg#icon-arrow-up"></use></svg>
+            <div class="faq-icon-wrapper">
+              <svg class="accordion-icon" width="20" height="20">
+                <use href="./img/sprite.svg#icon-arrow-up"></use>
+              </svg>
+            </div>
           </button>
-          <div class="ac-panel"><p class="faq-text">The terms of project implementation depend to a large extent on a number of factors, such as the scope of the project, its complexity, and the availability of resources. Determining exact deadlines is a difficult task, and it usually occurs during the planning phase of the project.</p></div>
+          <div class="ac-panel">
+            <p class="faq-text">The terms of project implementation depend to a large extent on a number of factors, such as the scope of the project, its complexity, and the availability of resources. Determining exact deadlines is a difficult task, and it usually occurs during the planning phase of the project.</p>
+          </div>
         </li>
 
         <li class="accordion-item ac" data-order="5">
-          <button class="ac-trigger">
+          <button type="button" class="ac-trigger">
             What payment methods do you accept?
-            <svg class="accordion-icon"><use href="./img/sprite.svg#icon-arrow-up"></use></svg>
+            <div class="faq-icon-wrapper">
+              <svg class="accordion-icon" width="20" height="20">
+                <use href="./img/sprite.svg#icon-arrow-up"></use>
+              </svg>
+            </div>
           </button>
-          <div class="ac-panel"><p class="faq-text">Payment through credit and debit cards such as Visa, MasterCard, specialized electronic payment systems such as PayPal, as well as payments in cryptocurrencies such as Bitcoin, Ethereum and others.</p></div>
+          <div class="ac-panel">
+            <p class="faq-text">Payment through credit and debit cards such as Visa, MasterCard, specialized electronic payment systems such as PayPal, as well as payments in cryptocurrencies such as Bitcoin, Ethereum and others.</p>
+          </div>
         </li>
 
         <li class="accordion-item ac" data-order="6">
-          <button class="ac-trigger">
+          <button type="button" class="ac-trigger">
             What does the process of developing a software product look like from idea to implementation?
-            <svg class="accordion-icon"><use href="./img/sprite.svg#icon-arrow-up"></use></svg>
+            <div class="faq-icon-wrapper">
+              <svg class="accordion-icon" width="20" height="20">
+                <use href="./img/sprite.svg#icon-arrow-up"></use>
+              </svg>
+            </div>
           </button>
-          <div class="ac-panel"><p class="faq-text">Payment through credit and debit cards such as Visa, MasterCard, specialized electronic payment systems such as PayPal, 
-            as well as payments in cryptocurrencies such as Bitcoin, Ethereum and others.</p></div>
-          </li>
-        </ul>
-        
-       
-      </div>
+          <div class="ac-panel">
+            <p class="faq-text">Payment through credit and debit cards such as Visa, MasterCard, specialized electronic payment systems such as PayPal, as well as payments in cryptocurrencies such as Bitcoin, Ethereum and others.</p>
+          </div>
+        </li>
+      </ul>
     </div>
-  </section>
+  </div>
+</section>
