--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -13,3 +13,4 @@
 @import url('./covers.css');
 @import url('./reviews.css');
 @import url('./footer-work-together.css');
+@import url('./mobile-menu.css');
