--- a/src/partials/benefits.html
+++ b/src/partials/benefits.html
@@ -1,4 +1,4 @@
-<section class="sections-paddings">
+<section class="sections-paddings" id="benefits-section">
   <div class="container">
     <h2 class="section-title">Benefits of working with me</h2>
 
