--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,7 +1,7 @@
 <header class="header" id="header">
   <div class="container header-container">
     <div class="wrapper">
-      <a class="logo-container" href="../index.html">
+      <a class="logo-container" href="./index.html">
         <img
           srcset="
             ./img/header/icon_header@1.png 1x,
@@ -28,10 +28,10 @@
           <a href="#about-me">About me</a>
         </li>
         <li class="menu-item">
-          <a href="#benefits">Benefits</a>
+          <a href="#benefits-section">Benefits</a>
         </li>
         <li class="menu-item">
-          <a href="#projects">Projects</a>
+          <a href="#projects-section">Projects</a>
         </li>
         <li class="menu-item">
           <a href="#faq-section">FAQ</a>
