--- a/src/partials/mobile-menu.html
+++ b/src/partials/mobile-menu.html
@@ -2,7 +2,7 @@
   <div class="mobile-menu-container">
     <button class="mobile-menu-button" type="button">
       <svg class="mobile-menu-close" width="28" height="28">
-        <use href=""></use>
+        <use href="./img/sprite.svg#icon-x"></use>
       </svg>
     </button>
     <div class="mobile-menu-wrapper">
@@ -12,17 +12,17 @@
             <a href="#about-me">About me</a>
           </li>
           <li class="mob-menu-item">
-            <a href="#benefits">Benefits</a>
+            <a href="#benefits-section">Benefits</a>
           </li>
           <li class="mob-menu-item">
-            <a href="#projects">Projects</a>
+            <a href="#projects-section">Projects</a>
           </li>
           <li class="mob-menu-item">
             <a href="#faq-section">FAQ</a>
           </li>
         </ul>
       </nav>
-      <a class="mobile-menu-order" href="#footer">Order the project</a>
+      <a class="mobile-menu-order" href="#work-together">Order the project</a>
     </div>
   </div>
 </div>
