--- a/src/partials/projects.html
+++ b/src/partials/projects.html
@@ -1,4 +1,4 @@
-<section class="sections-paddings">
+<section class="sections-paddings" id="projects-section">
   <div class="container">
     <h2 class="section-title">projects</h2>
   </div>
