--- a/src/partials/mobile-menu.html
+++ b/src/partials/mobile-menu.html
@@ -11,13 +11,13 @@
           <li class="mobile-menu-item">
             <a href="#about-me">About me</a>
           </li>
-          <li class="mob-menu-item">
+          <li class="mobile-menu-item">
             <a href="#benefits-section">Benefits</a>
           </li>
-          <li class="mob-menu-item">
+          <li class="mobile-menu-item">
             <a href="#projects-section">Projects</a>
           </li>
-          <li class="mob-menu-item">
+          <li class="mobile-menu-item">
             <a href="#faq-section">FAQ</a>
           </li>
         </ul>
