--- a/src/css/header.css
+++ b/src/css/header.css
@@ -9,15 +9,24 @@
 }
 /* PLASHKA */
 .header-fixed {
-  position: absolute;
-  top: 5px;
-  left: 50%;
-  transform: translateX(-50%);
+position: fixed;
+  /* Фіксована позиція */
+  top: 0;
+  /* Відстань від верхньої частини */
+  left: 0;
+  /* Відстань від лівої частини */
   width: 100%;
-  background-color: rgba(0, 0, 0, 0.671);
-  border-radius: 15px;
-  padding-top: 10px;
-  padding-bottom: 10px;
+  /* Ширина заголовка */
+  background-color: rgba(51, 51, 51, 0.9);
+  /* Напівпрозорий фон при фіксації */
+  padding-top: 16px;
+  /* Зменшені внутрішні відступи при фіксації */
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
+  /* Тінь при фіксації */
+  z-index: 10000;
+  /* Високий z-index, щоб заголовок був поверх інших елементів */
+  transition: background-color 0.3s ease, padding-top 0.3s ease;
+  /* Анімація для фону та відступів */
 }
 .menu-button {
   display: flex;
