--- a/src/partials/mobile-menu.html
+++ b/src/partials/mobile-menu.html
@@ -1,4 +1,4 @@
-<div class="mobile-menu">
+<div class="mobile-menu" id="mob-menu">
   <div class="mobile-menu-container">
     <button class="mobile-menu-button" type="button">
       <svg class="mobile-menu-close" width="28" height="28">
