--- a/src/css/about-me.css
+++ b/src/css/about-me.css
@@ -362,7 +362,7 @@
   margin-left: 0;
   margin-right: 0;
 }
-.swiper-slide-active {
+.about-me-swiper-slide-active {
   background-color: #c6e327;
 }
 
