--- a/src/css/header.css
+++ b/src/css/header.css
@@ -24,7 +24,6 @@
   align-items: flex-start;
 }
 
-
 .wrapper {
   display: flex;
   justify-content: space-between;
@@ -41,32 +40,30 @@
   display: none;
 }
 /* MOBIL */
-@media screen and (max-width: 767px){
-  .header{
+@media screen and (max-width: 767px) {
+  .header {
     position: fixed;
   }
-
 }
 /* TABLE */
 @media only screen and (min-width: 768px) {
   .header {
-      position: fixed;
-    }
-  .nav {
-      display: flex;
-      flex-direction: column;
+    position: fixed;
   }
-  
+  .nav {
+    display: flex;
+    flex-direction: column;
+  }
+
   .header-container {
     display: flex;
     justify-content: space-between;
   }
 
-
   .menu {
     border: none;
     font-weight: 500;
-    color: #FAFAFA;
+    color: #fafafa;
     background-color: transparent;
     text-decoration: underline;
     transition: color 450ms ease;
